QoL fix on mobile - accidental button push

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body, html {
     width: 100%;
     background: rgb(243, 243, 243);
     font-family: 'Raleway', sans-serif;
+    scroll-behavior: smooth;
 }
 
 #root {
